--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
 	<title>SITENAME</title>
 </head>
 <body>
-	
+	<div class="header" id="header" >
+		<div class="header-container container">
+			<div class="heder-logo">
+				<h1>SITENAME <span>My first web page</span></h1>
+			</div>
+			<div class="header-user"></div>
+		</div>
+	</div>
+	<div class="navbar">
+		<div class="navbar-container container">
+			<div class="navbar-nav">
+				<ul>
+					<li class="active">
+							<a href="">Home</a>
+					</li>
+					<li>
+							<a href="">About</a>
+					</li>
+					<li>
+							<a href="">News</a>
+					</li>
+					<li>
+							<a href="">Portfolio</a>
+					</li>
+					<li>
+							<a href="">Blog</a>
+					</li>
+				</ul>
+			</div>
+			<div class="navbar-search"></div>
+		</div>
+	</div>
 </body>
 </html>
