--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 			<div class="heder-logo">
 				<h1>SITENAME <span>My first web page</span></h1>
 			</div>
-			<div class="header-user"></div>
+			<div class="header-user">
+				<button>Login</button>
+				<button>Contact me</button>
+			</div>
 		</div>
 	</div>
 	<div class="navbar">
