--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<div class="header" id="header" >
 		<div class="header-container container">
 			<div class="heder-logo">
-				<h1>SITENAME <span>My first web page</span></h1>
+				<h1> sitename <span>My first web page</span></h1>
 			</div>
 			<div class="header-user">
-				<button>Login</button>
-				<button>Contact me</button>
+				<button class="login">login</button>
+				<button class="contact">contact me</button>
 			</div>
 		</div>
 	</div>
