--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>SITENAME</title>
 </head>
 <body>
+	<!-- Start header -->	
 	<div class="header" id="header" >
 		<div class="header-container container">
 			<div class="heder-logo">
@@ -19,6 +20,9 @@
 			</div>
 		</div>
 	</div>
+	<!--And header  -->
+
+	<!-- Start navbar -->
 	<div class="navbar">
 		<div class="navbar-container container">
 			<div class="navbar-nav">
@@ -43,5 +47,35 @@
 			<div class="navbar-search"></div>
 		</div>
 	</div>
+	<!-- And navbar -->
+
+	<!-- Start content -->
+	<div class="content-container">
+		<div class="content-container container">
+			<div class="subtitle">
+				<h2><p> what 10 things should you doevery day</p> 
+				<p>to improve your life ?</p></h2>
+			</div>
+			<div class="paragraf">
+				<p>Learning another can keep your mind sharp.Music lesson increase</p>
+				<p>inteligenc.Challenging your beliefs stretnens your mind.Increasing</p>
+				<p>willpower just takesa little effort each day and it's more responsible for your</p>
+				<p>success tha IQ</p>
+			</div>
+			<div class="list">
+				<h3>Key features</h3>
+					<ul>
+						<li>it will make you happier.</li>
+						<li>it will imorov you relationships.</li>
+						<li>it can make you a better person.</li>
+						<li>it can make life better for everyone.</li>
+					</ul>
+			</div>
+		</div>
+	</div>	
+	<!-- And content -->
+
+	<!-- Start gallery -->
+	
 </body>
 </html>
