--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
 	<!-- And navbar -->
 
 	<!-- Start content -->
-	<div class="content-container">
-		<div class="content-container container">
+	<div class="content">
+		<div class="content-container container ">
 			<div class="subtitle">
 				<h2><p> what 10 things should you doevery day</p> 
 				<p>to improve your life ?</p></h2>
 			</div>
 			<div class="paragraf">
-				<p>Learning another can keep your mind sharp.Music lesson increase</p>
-				<p>inteligenc.Challenging your beliefs stretnens your mind.Increasing</p>
-				<p>willpower just takesa little effort each day and it's more responsible for your</p>
+				<p>Learning another can keep your mind sharp.Music lesson increase<p>
+				<p>inteligenc.Challenging your beliefs stretnens your mind.Increasing<p>
+				<p>willpower just takesa little effort each day and it's more responsible for your<p>
 				<p>success tha IQ</p>
 			</div>
 			<div class="list">
@@ -77,5 +77,58 @@
 
 	<!-- Start gallery -->
 	
+	<div class="gallery">
+		<div class="gallery-container">
+			<div class="galley-singl">
+				<div class="gallery-img">
+					<img src="./img/SPEND-MORE.jpg" alt="forest">
+				</div>
+				<div class="gallery-description">
+					<p>Being in nature reduces stress,makes you more creative</p>
+				</div>
+			</div>
+			<div class="galley-singl">
+				<div class="gallery-img">
+					<img src="./img/pexels-photo-54300.webp" alt="dandelion">
+				</div>
+				<div class="gallery-description">
+					<p>Usability Testing for mobile IS Easy</p>
+				</div>
+			</div>
+			<div class="galley-singl">
+				<div class="gallery-img">
+					<img src="./img/leaf.jpg" alt="wet leaf">
+				</div>
+				<div class="gallery-description">
+					<p>Infinite Scrolling Is Not for Every Website</p>
+				</div>
+			</div>
+			<div class="galley-singl">
+				<div class="gallery-img">
+					<img src="./img/wolfs.jpg" alt="wolfs">
+				</div>
+				<div class="gallery-description">
+					<p>Ecommerce UX-3 Design Trends to Folow and 3 to Avoid</p>
+				</div>
+			</div>
+			<div class="galley-singl">
+				<div class="gallery-img">
+					<img src="./img/horse.jpg" alt="horse">
+				</div>
+				<div class="gallery-description">
+					<p>University Website:Top 10 Design Guidelines</p>
+				</div>
+			</div>
+			<div class="galley-singl">
+				<div class="gallery-img">
+					<img src="./img/night in the beach.jpg" alt="beach">
+				</div>
+				<div class="gallery-description">
+					<p>University Website:Top 10 Design Guidelines</p>
+				</div>
+			</div>
+			
+		</div>
+	</div>
 </body>
 </html>
