--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			</div>
 			<div class="galley-singl">
 				<div class="gallery-img">
-					<img src="./img/leaf.jpg" alt="wet leaf">
+					<img src="./img/images-61.jpg" alt="nature">
 				</div>
 				<div class="gallery-description">
 					<p>Infinite Scrolling Is Not for Every Website</p>
