--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			</div>
 			<div class="galley-singl">
 				<div class="gallery-img">
-					<img src="./img/pexels-photo-54300.webp" alt="dandelion">
+					<img src="./img/tsvety-polevye-romashki-risunok-romashki-polevye.jpg" alt="chamomile">
 				</div>
 				<div class="gallery-description">
 					<p>Usability Testing for mobile IS Easy</p>
