--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<div class="gallery">
 		<div class="gallery-container container">
 			<div class="galley-singl">
-				<div class="gallery-img">
+				<div class="singl-img">
 					<img src="./img/SPEND-MORE.jpg" alt="forest">
 				</div>
 				<div class="gallery-description">
@@ -88,7 +88,7 @@
 				</div>
 			</div>
 			<div class="galley-singl">
-				<div class="gallery-img">
+				<div class="singl-img">
 					<img src="./img/tsvety-polevye-romashki-risunok-romashki-polevye.jpg" alt="chamomile">
 				</div>
 				<div class="gallery-description">
@@ -96,7 +96,7 @@
 				</div>
 			</div>
 			<div class="galley-singl">
-				<div class="gallery-img">
+				<div class="singl-img">
 					<img src="./img/images-61.jpg" alt="nature">
 				</div>
 				<div class="gallery-description">
@@ -104,7 +104,7 @@
 				</div>
 			</div>
 			<div class="galley-singl">
-				<div class="gallery-img">
+				<div class="singl-img">
 					<img src="./img/wolfs.jpg" alt="wolfs">
 				</div>
 				<div class="gallery-description">
@@ -112,7 +112,7 @@
 				</div>
 			</div>
 			<div class="galley-singl">
-				<div class="gallery-img">
+				<div class="singl-img">
 					<img src="./img/horse.jpg" alt="horse">
 				</div>
 				<div class="gallery-description">
@@ -120,7 +120,7 @@
 				</div>
 			</div>
 			<div class="galley-singl">
-				<div class="gallery-img">
+				<div class="singl-img">
 					<img src="./img/night in the beach.jpg" alt="beach">
 				</div>
 				<div class="gallery-description">
