--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
 	<!-- Start gallery -->
 	
 	<div class="gallery">
-		<div class="gallery-container container">
-			<div class="galley-singl">
+		<div  class="gallery-container container">
+			<h6>recent news</h6>
+			<div class="gallery-singl">
 				<div class="singl-img">
 					<img src="./img/SPEND-MORE.jpg" alt="forest">
 				</div>
@@ -87,7 +88,7 @@
 					<p>Being in nature reduces stress,makes you more creative</p>
 				</div>
 			</div>
-			<div class="galley-singl">
+			<div class="gallery-singl">
 				<div class="singl-img">
 					<img src="./img/tsvety-polevye-romashki-risunok-romashki-polevye.jpg" alt="chamomile">
 				</div>
@@ -95,7 +96,7 @@
 					<p>Usability Testing for mobile IS Easy</p>
 				</div>
 			</div>
-			<div class="galley-singl">
+			<div class="gallery-singl">
 				<div class="singl-img">
 					<img src="./img/images-61.jpg" alt="nature">
 				</div>
@@ -103,7 +104,7 @@
 					<p>Infinite Scrolling Is Not for Every Website</p>
 				</div>
 			</div>
-			<div class="galley-singl">
+			<div class="gallery-singl">
 				<div class="singl-img">
 					<img src="./img/wolfs.jpg" alt="wolfs">
 				</div>
@@ -111,7 +112,7 @@
 					<p>Ecommerce UX-3 Design Trends to Folow and 3 to Avoid</p>
 				</div>
 			</div>
-			<div class="galley-singl">
+			<div class="gallery-singl">
 				<div class="singl-img">
 					<img src="./img/horse.jpg" alt="horse">
 				</div>
@@ -119,7 +120,7 @@
 					<p>University Website:Top 10 Design Guidelines</p>
 				</div>
 			</div>
-			<div class="galley-singl">
+			<div class="gallery-singl">
 				<div class="singl-img">
 					<img src="./img/night in the beach.jpg" alt="beach">
 				</div>
@@ -127,7 +128,6 @@
 					<p>University Website:Top 10 Design Guidelines</p>
 				</div>
 			</div>
-			
 		</div>
 	</div>
 </body>
